fix(icon-button): add padding-top for better vertical alignment

--- a/src/app/components/ui/buttons/icon-button/icon-button.component.scss
+++ b/src/app/components/ui/buttons/icon-button/icon-button.component.scss
@@ -13,6 +13,7 @@
   position: relative;
   aspect-ratio: 1;
   flex-shrink: 0;
+  padding-top: 6px;
 
   &:focus-visible {
     outline: none;
